--- a/main.css
+++ b/main.css
@@ -74,6 +74,13 @@ input, select, textarea {
 
 /* Basic */
 
+/*My additions*/
+ @media only screen and (max-width: 480px) {
+  img {
+    width: 50%;
+  }
+}
+
 	@-ms-viewport {
 		width: device-width;
 	}
