--- a/main.css
+++ b/main.css
@@ -75,10 +75,11 @@ input, select, textarea {
 /* Basic */
 
 /*My additions*/
- @media only screen and (max-width: 480px) {
-  img {
-    width: 50%;
-  }
+img
+{
+    max-width: 100%;
+    min-width: 300px;
+    height: auto;
 }
 
 	@-ms-viewport {
@@ -2644,6 +2645,9 @@ input, select, textarea {
 		.image img {
 			display: block;
 			border-radius: 4px;
+   			 max-width: 100%;
+  			  min-width: 200px;
+ 			   height: auto;
 		}
 
 		.image.left, .image.right {
